src/core/css/panel/media-caption.css
.fg-panel-info-toggle {
    display: inline-block;
}
:is(.fg-medium,.fg-panel-no-mobile):not(.fg-panel-info-overlay) .fg-panel-info-toggle {
    display: none;
}
.fg-media-caption {
    position: relative;
    box-sizing: border-box;
    width: 100%;
    height: auto;
    max-width: 100%;
    max-height: 100%;
    padding: 10px;
    gap: 10px;
    font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.4;
    pointer-events: auto;
    display: flex;
    flex-direction: column;
}
:is(.fg-panel-info-top,.fg-panel-info-bottom) .fg-media-caption {
    text-align: center;
    padding: 10px 42px;
}
.fg-panel-media-caption-left .fg-media-caption {
    text-align: left;
}
.fg-panel-media-caption-right .fg-media-caption {
    text-align: right;
}
.fg-panel-media-caption-center .fg-media-caption {
    text-align: center;
}
.fg-panel-media-caption-justify .fg-media-caption {
    text-align: justify;
}

.fg-media-caption-title {
    font-weight: 600;
    border: none;
    padding-bottom: 10px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
}
:is(.fg-panel-info-top,.fg-panel-info-bottom):is(.fg-medium,.fg-panel-no-mobile) .fg-media-caption-title {
    padding-bottom: 0;
    border-bottom-width: 0;
}

.fg-media-caption-description {
    font-size: smaller;
    max-height: 100%;
    height: auto;
    overflow-x: hidden;
    overflow-y: auto;
    border: none;
}


.fg-media-caption-exif {
    display: none;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    border: none;
    text-align: left;
    padding: 10px 0 0 0;
    gap: 10px;
}
.rtl .fg-media-caption-exif {
    text-align: right;
}
.fg-media-caption-exif:is(.fg-media-caption-exif-auto,.fg-media-caption-exif-full,.fg-media-caption-exif-partial,.fg-media-caption-exif-minimal) {
    display: flex;
}
.fg-media-caption-description + .fg-media-caption-exif {
    border-top-style: solid;
    border-top-width: 1px;
}
.fg-medium:is(.fg-panel-info-left,.fg-panel-info-right) .fg-media-caption-exif:is(.fg-media-caption-exif-auto,.fg-media-caption-exif-full,.fg-media-caption-exif-partial) {
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: left;
}
.fg-media-caption-exif-prop {
    position: relative;
    display: flex;
    height: 24px;
    padding: 0;
    gap: 10px;
}
.rtl .fg-media-caption-exif-prop {
    flex-direction: row-reverse;
}

.fg-media-caption-exif-full .fg-media-caption-exif-prop,
.fg-panel.fg-large .fg-media-caption-exif-auto .fg-media-caption-exif-prop {
    height: 30px;
}
.fg-media-caption-exif-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    min-width: 16px;
    min-height: 16px;
    width: 16px;
    height: 100%;
}

.fg-media-caption-exif-content {
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}
.fg-media-caption-exif-full .fg-media-caption-exif-content,
.fg-media-caption-exif-partial .fg-media-caption-exif-content,
.fg-panel.fg-medium .fg-media-caption-exif-auto .fg-media-caption-exif-content {
    display: flex;
}

.fg-media-caption-exif-label {
    display: none;
    width: 100%;
    font-size: 11px;
    font-style: italic;
    line-height: 11px;
    white-space: nowrap;
}
.fg-media-caption-exif-full .fg-media-caption-exif-label,
.fg-panel.fg-large .fg-media-caption-exif-auto .fg-media-caption-exif-label {
    display: block;
}
.fg-media-caption-exif-value {
    display: none;
    width: 100%;
    font-size: 12px;
    line-height: 14px;
    white-space: nowrap;
}
.fg-media-caption-exif-full .fg-media-caption-exif-value,
.fg-media-caption-exif-partial .fg-media-caption-exif-value,
.fg-panel.fg-medium .fg-media-caption-exif-auto .fg-media-caption-exif-value {
    display: block;
}

.fg-media-caption-exif-tooltip {
    display: none;
    position: absolute;
    top: -8px;
    left: 50%;
    transform: translateX(-50%) translateY(-100%);
    color: #FFF;
    white-space: nowrap;
    background-color: #333;
    font-size: 12px;
    padding: 4px 8px;
    border-radius: 3px;
    box-shadow: 0 0 10px 0 #000;
    z-index: 1;
}
.fg-panel-info-top .fg-media-caption-exif-tooltip {
    top: unset;
    bottom: -8px;
    transform: translateX(-50%) translateY(100%);
}
:is(.fg-media-caption-exif-partial,.fg-media-caption-exif-full,.fg-panel.fg-medium .fg-media-caption-exif-auto) .fg-media-caption-exif-tooltip {
    left: 0;
    transform: translateY(-100%);
}
:is(.fg-panel-info-top .fg-media-caption-exif-partial,.fg-panel-info-top .fg-media-caption-exif-full,.fg-panel.fg-medium.fg-panel-info-top .fg-media-caption-exif-auto) .fg-media-caption-exif-tooltip {
    transform: translateY(100%);
}
.rtl :is(.fg-media-caption-exif-partial,.fg-media-caption-exif-full,.fg-panel.fg-medium .fg-media-caption-exif-auto) .fg-media-caption-exif-tooltip {
    left: unset;
    right: 0;
    transform: translateY(-100%);
}
.rtl :is(.fg-panel-info-top .fg-media-caption-exif-partial,.fg-panel-info-top .fg-media-caption-exif-full,.fg-panel.fg-medium.fg-panel-info-top .fg-media-caption-exif-auto) .fg-media-caption-exif-tooltip {
    transform: translateY(100%);
}

.fg-media-caption-exif-tooltip-pointer {
    display: block;
    content: '';
    border-top: 8px solid #333;
    border-bottom: 8px solid transparent;
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    height: 0;
    width: 0;
    position: absolute;
    bottom: -16px;
    left: 50%;
    margin-left: -8px;
}
.fg-panel-info-top .fg-media-caption-exif-tooltip-pointer {
    border-top: 8px solid transparent;
    border-bottom: 8px solid #333;
    bottom: unset;
    top: -16px;
}
:is(.fg-media-caption-exif-partial,.fg-media-caption-exif-full,.fg-panel.fg-medium .fg-media-caption-exif-auto) .fg-media-caption-exif-tooltip-pointer {
    left: 21px;
}
.rtl :is(.fg-media-caption-exif-partial,.fg-media-caption-exif-full,.fg-panel.fg-medium .fg-media-caption-exif-auto) .fg-media-caption-exif-tooltip-pointer {
    left: unset;
    margin-left: unset;
    right: 21px;
    margin-right: -8px;
}

.fg-media-caption-exif-prop.fg-media-caption-exif-show-tooltip .fg-media-caption-exif-tooltip {
    display: inline-block;
}

@media (hover: hover) {
    .fg-media-caption-exif-tooltip {
        display: none;
    }
    .fg-media-caption-exif-prop:hover .fg-media-caption-exif-tooltip {
        display: inline-block;
    }
}

